Fix the margin spacing for the utility form.

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -96,8 +96,6 @@ body a:hover
   padding-bottom: 3px
   font-size: 10pt
   text-align: right
-#utility form
-  margin-right: 20px
 #header
   margin-top: 10px
   margin-bottom: 20px
